# a2a-radar

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: growth-cycle.yml
apps/api/: package.json  (+1 more)
configs/: ecosystem-agents.json  integration-manifest.json  leaderboard-weights.json  pricing.json
docs/: AGENT_BEHAVIORS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BOARD_ACTIVITY_STRATEGY.md  CLOUD_GROWTH_RUNNER.md  DEMO_SCRIPT.md  DEPLOYMENT.md  ECONOMIC_MODEL.md  ECOSYSTEM_INTEGRATIONS.md  FINAL_DEMO_SCRIPT.md  HY4_PREDICT_INTEGRATION.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_GUIDE.md  JUDGE_DEMO_GUIDE.md  LEADERBOARD_DESIGN.md  MESSAGE_FLOW.md  MODULE_BREAKDOWN.md  OPERATOR_RUNBOOK.md  OUTREACH_TEMPLATES.md  POST_SEASON_VISION.md  SOCIAL_PLAYBOOK.md  SOCIAL_STRATEGY.md  STARTER_KIT_ALIGNMENT.md  TESTING_GUIDE.md  THEBOOKDEX_INTEGRATION.md  USER_GROWTH_PLAYBOOK.md  VARABRIDGE_INTEGRATION.md
programs/radar-core-program/: Cargo.toml
programs/radar-core-program/src/: lib.rs
programs/radar-core-program/tests/: init.rs
programs/radar-market-program/: Cargo.toml  build.rs
programs/radar-market-program/src/: lib.rs
scripts/: autonomous-growth-loop.mjs  build-all.mjs  claim-instructions.mjs  deploy-three-agents.mjs  deployment-status.mjs  generate-social-copy.mjs  get-voucher.mjs  index-chain-events.mjs  integrate-hy4-predict.mjs  integrate-thebookdex.mjs  integrate-varabridge.mjs  onboarding-checklist.mjs  optimize-wasm.mjs  prepare-registry-payloads.mjs  refresh-wallet-status.mjs  register-operator-participant.mjs  register-three-agents.mjs  render-import-wallet.mjs  render-start.mjs  rust-check.mjs  set-board-identities.mjs  smoke-live-flow.mjs  test-growth-api.mjs  validate-call-encoding.mjs  vara-commands.mjs  wait-funded.mjs  wire-three-agents.mjs
tools/idl-gen/: Cargo.toml
tools/idl-gen/src/: main.rs
(+57 files in other folders)
