[workspace]
resolver = "2"
members = [
  "packages/protocol/rust",
  "programs/radar-core-program",
  "programs/radar-broadcast-program",
  "programs/radar-market-program",
  "tools/idl-gen"
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/samscript18/a2a-radar"
homepage = "https://a2a-radar.vara.network"

[workspace.dependencies]
gstd = "1.9.0"
sails-rs = "0.9.0"
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
