[package]
name = "a2a-radar-core-program"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
a2a-radar-types = { path = "../../packages/protocol/rust" }
gstd.workspace = true
sails-rs.workspace = true

[dev-dependencies]
gtest = "1.10.0"

[build-dependencies]
gear-wasm-builder = "1.10.0"
