[package]
name = "a2a-radar-market-program"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
a2a-radar-types = { path = "../../packages/protocol/rust" }
gstd.workspace = true
sails-rs.workspace = true

[build-dependencies]
gear-wasm-builder = "1.10.0"

