[package]
name = "a2a-radar-idl-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
a2a-radar-core-program = { path = "../../programs/radar-core-program" }
a2a-radar-broadcast-program = { path = "../../programs/radar-broadcast-program" }
a2a-radar-market-program = { path = "../../programs/radar-market-program" }
sails-rs = { workspace = true, features = ["idl-gen"] }

